@@ -28,6 +28,8 @@ unity (7.4.0+16.04.20160801.2-0ubuntu2) UNRELEASED; urgency=medium
     is at the bottom (LP: #1611694)
   * OverlayRenderer: don't use rotated textures, just rotate them at
     rendering time
+  * SpreadWidgets: add container for spread filter and new spread
+    decorations (LP: #1283314)
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 23 Aug 2016 17:00:35 +0200
 
